[package]
name = "hive-heat"
version = "0.1.0"
authors = ["Andrew Dingwall-Smith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde_json = { version = "1.0" }
toml = "0.4.2"
dirs = "3.0.0"
