[package]
name = "hheat"
version = "0.2.0"
authors = ["Andrew Dingwall-Smith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.0"
http = "0.2.1"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde_json = "1.0"
toml = "0.4.2"
